Prevent overflowing game comments

--- a/css/WebsiteModification.css
+++ b/css/WebsiteModification.css
@@ -24,6 +24,7 @@
 	.sg_game_comment_small {
 		width: 145px;
 		padding-left: 7px;
+		height: auto;
 	}
 	.sg_mgpaper_headline {
 		width: 245px;
